--- a/gabs.html
+++ b/gabs.html
@@ -109,7 +109,7 @@
 			<tr>
 				<td>1</td>
 				<td>Dad &amp; Dave&#39;s Brewing</td>
-				<td>BOBA BEER</td>
+				<td>Boba Beer</td>
 				<td>Sour - Berliner Weisse</td>
 				<td>6%</td>
 				<td>MID</td>
@@ -119,7 +119,7 @@
 			<tr>
 				<td>2</td>
 				<td>The Coastal Brewing Company</td>
-				<td>HOMESTEAD BLACKBERRY &amp; APPLE PASTRY SOUR</td>
+				<td>Homestead Blackberry &Amp; Apple Pastry Sour</td>
 				<td>Specialty Beer</td>
 				<td>6%</td>
 				<td>LOW</td>
@@ -129,7 +129,7 @@
 			<tr>
 				<td>3</td>
 				<td>7th Day Brewery</td>
-				<td>SUIT UP</td>
+				<td>Suit UP</td>
 				<td>IPA - Black</td>
 				<td>6.5%</td>
 				<td>MID</td>
@@ -139,7 +139,7 @@
 			<tr>
 				<td>4</td>
 				<td>Six String Brewing Co.</td>
-				<td>WHISKEY IN THE JAR</td>
+				<td>Whiskey In The Jar</td>
 				<td>Wood Aged Beer</td>
 				<td>12%</td>
 				<td>HIGH</td>
@@ -149,7 +149,7 @@
 			<tr>
 				<td>5</td>
 				<td>The Marsden Brewhouse</td>
-				<td>MARSDEN NEOPOLITAN PORTER</td>
+				<td>Marsden Neopolitan Porter</td>
 				<td>Stout - Tropical</td>
 				<td>5.5%</td>
 				<td>MID</td>
@@ -159,7 +159,7 @@
 			<tr>
 				<td>6</td>
 				<td>The Mill Brewery</td>
-				<td>GO! GO! ICHIGO!</td>
+				<td>Go! Go! Ichigo!</td>
 				<td>Sour - Gose</td>
 				<td>5.5%</td>
 				<td>MID</td>
@@ -169,7 +169,7 @@
 			<tr>
 				<td>7</td>
 				<td>Hop Nation Brewing Co</td>
-				<td>MARKET 2023</td>
+				<td>Market 2023</td>
 				<td>IPA - New England</td>
 				<td>6%</td>
 				<td>MID</td>
@@ -179,7 +179,7 @@
 			<tr>
 				<td>8</td>
 				<td>Bad Shepherd Brewing Co</td>
-				<td>BARREL AGED RUM DOUBLE CHOC...</td>
+				<td>Barrel Aged Rum Double Choc...</td>
 				<td>Specialty Beer</td>
 				<td>7.5%</td>
 				<td>HIGH</td>
@@ -189,7 +189,7 @@
 			<tr>
 				<td>9</td>
 				<td>Yenda Brewing Co</td>
-				<td>I AM WEISS</td>
+				<td>I Am Weiss</td>
 				<td>Weizen/Weissbier</td>
 				<td>5%</td>
 				<td>LOW</td>
@@ -209,7 +209,7 @@
 			<tr>
 				<td>11</td>
 				<td>The Zythologist</td>
-				<td>MOLECULAR BUBBLE TEA IPA</td>
+				<td>Molecular Bubble Tea Ipa</td>
 				<td>IPA - Milkshake</td>
 				<td>6.2%</td>
 				<td>MID</td>
@@ -320,7 +320,7 @@
 			<tr>
 				<td>21</td>
 				<td>Resin Brewing</td>
-				<td>CALYPSO</td>
+				<td>Calypso</td>
 				<td>IPA - Hazy</td>
 				<td>6.0%</td>
 				<td>LOW</td>
@@ -330,7 +330,7 @@
 			<tr>
 				<td>22</td>
 				<td>Catchment Brewing Co</td>
-				<td>LONG ISLAND ICED TEA SOUR</td>
+				<td>Long Island Iced Tea Sour</td>
 				<td>Sour - Kettle Sour</td>
 				<td>7.5%</td>
 				<td>HIGH</td>
@@ -340,7 +340,7 @@
 			<tr>
 				<td>23</td>
 				<td>Psycho Suzie’s Brewing</td>
-				<td>UPPER MANAGEMENT</td>
+				<td>Upper Management</td>
 				<td>IPA - Red</td>
 				<td>8.5%</td>
 				<td>HIGH</td>
@@ -350,7 +350,7 @@
 			<tr>
 				<td>24</td>
 				<td>Noodledoof</td>
-				<td>DESERT LIME GIMLET IPA</td>
+				<td>Desert Lime Gimlet Ipa</td>
 				<td>Specialty Beer</td>
 				<td>6.8%</td>
 				<td>MID</td>
@@ -360,7 +360,7 @@
 			<tr>
 				<td>25</td>
 				<td>Wayward Brewing Co</td>
-				<td>VIOLET BEAUREGARDE’S BLUEBERRY MARSHMALLOW LACTOSE SOUR ALE</td>
+				<td>Violet Beauregarde’S Blueberry Marshmallow Lactose Sour Ale</td>
 				<td>Sour - Pastry</td>
 				<td>4.0%</td>
 				<td>LOW</td>
@@ -370,7 +370,7 @@
 			<tr>
 				<td>26</td>
 				<td>Batch Brewing Co</td>
-				<td>AUGUSTUS GLOOP’S CHOC FUDGE PEANUT BRITTLE STOUT</td>
+				<td>Augustus Gloop’S Choc Fudge Peanut Brittle Stout</td>
 				<td>Stout - Pastry</td>
 				<td>6.0%</td>
 				<td>MID</td>
@@ -380,7 +380,7 @@
 			<tr>
 				<td>27</td>
 				<td>Blackman’s Brewery</td>
-				<td>RED FROG, RASPBERRY DARK LAGER</td>
+				<td>Red Frog, Raspberry Dark Lager</td>
 				<td>Lager - Dark</td>
 				<td>5.0%</td>
 				<td>LOW</td>
@@ -390,7 +390,7 @@
 			<tr>
 				<td>28</td>
 				<td>Coldstream Brewery</td>
-				<td>CHERRY FRUITED BRAGGOT</td>
+				<td>Cherry Fruited Braggot</td>
 				<td>Braggot</td>
 				<td>6.5%</td>
 				<td>?</td>
@@ -400,7 +400,7 @@
 			<tr>
 				<td>29</td>
 				<td>Good Land Brewing Co</td>
-				<td>BANANARAMA PINA COLADA</td>
+				<td>Bananarama Pina Colada</td>
 				<td>Sour - Fruit</td>
 				<td>5.8%</td>
 				<td>LOW</td>
@@ -410,7 +410,7 @@
 			<tr>
 				<td>30</td>
 				<td>Precinct Brewing</td>
-				<td>THROWING HAZE</td>
+				<td>Throwing Haze</td>
 				<td>IPA - Hazy</td>
 				<td>6.8%</td>
 				<td>MID</td>
@@ -420,7 +420,7 @@
 			<tr>
 				<td>31</td>
 				<td>King River Brewing</td>
-				<td>STICKE COFFEE KOLSCH</td>
+				<td>Sticke Coffee Kolsch</td>
 				<td>Kölsch</td>
 				<td>7%</td>
 				<td>HIGH</td>
@@ -430,7 +430,7 @@
 			<tr>
 				<td>32</td>
 				<td>Black Hops Brewery</td>
-				<td>SQUISHEE</td>
+				<td>Squishee</td>
 				<td>Sour - Kettle Sour</td>
 				<td>6.5%</td>
 				<td>MID</td>
@@ -440,7 +440,7 @@
 			<tr>
 				<td>33</td>
 				<td>Deeds Brewing</td>
-				<td>PEANUT BUTTER BROWNIE IMPERIAL STOUT</td>
+				<td>Peanut Butter Brownie Imperial Stout</td>
 				<td>Stout - Imperial</td>
 				<td>10%</td>
 				<td>HIGH</td>
@@ -450,7 +450,7 @@
 			<tr>
 				<td>34</td>
 				<td>Blackflag Brewing</td>
-				<td>BARELY LEGAL</td>
+				<td>Barely Legal</td>
 				<td>IPA - Imperial</td>
 				<td>18.1%</td>
 				<td>HIGH</td>
@@ -460,7 +460,7 @@
 			<tr>
 				<td>35</td>
 				<td>Five&#39; 3&quot; Brewing</td>
-				<td>MUNICH DUNKEL</td>
+				<td>Munich Dunkel</td>
 				<td>Munich Dunkel</td>
 				<td>5%</td>
 				<td>LOW</td>
@@ -470,7 +470,7 @@
 			<tr>
 				<td>36</td>
 				<td>Bonehead Brewing</td>
-				<td>THROAT POUR</td>
+				<td>Throat Pour</td>
 				<td>Lager - Classic Pilsner</td>
 				<td>5.1%</td>
 				<td>LOW</td>
@@ -480,7 +480,7 @@
 			<tr>
 				<td>37</td>
 				<td>Revel Brewing Co.</td>
-				<td>BLACK FORREST CAKE SOUR</td>
+				<td>Black Forrest Cake Sour</td>
 				<td>Sour - Pastry</td>
 				<td>6%</td>
 				<td>MID</td>
@@ -490,7 +490,7 @@
 			<tr>
 				<td>38</td>
 				<td>Pixel Brewing</td>
-				<td>PEAK HYPE</td>
+				<td>Peak Hype</td>
 				<td>IPA - American</td>
 				<td>6.5 %</td>
 				<td>MID</td>
@@ -500,7 +500,7 @@
 			<tr>
 				<td>39</td>
 				<td>Bright Brewery</td>
-				<td>DRINKIN’ DONUTS IMPERIAL JAM DONUT GOLDEN ALE</td>
+				<td>Drinkin’ Donuts Imperial Jam Donut Golden Ale</td>
 				<td>Experimental Beer</td>
 				<td>8 %</td>
 				<td>HIGH</td>
@@ -510,7 +510,7 @@
 			<tr>
 				<td>40</td>
 				<td>Wolf of the Willows</td>
-				<td>THE SNOWBALL EFFECT</td>
+				<td>The Snowball Effect</td>
 				<td>Stout - Pastry</td>
 				<td>10.5 %</td>
 				<td>HIGH</td>
@@ -530,7 +530,7 @@
 			<tr>
 				<td>41</td>
 				<td>Braeside Brewing Co</td>
-				<td>RYE RYE RYE DELIAH</td>
+				<td>Rye Rye Rye Deliah</td>
 				<td>IPA - Red</td>
 				<td>6.5%</td>
 				<td>MID</td>
@@ -540,7 +540,7 @@
 			<tr>
 				<td>42</td>
 				<td>Badlands Brewery</td>
-				<td>&quot;GRANDMERE&#39;S CRUMBLE&quot; RHUBARB &amp; CUSTARD</td>
+				<td>&Quot;Grandmere&#39;S Crumble&Quot; Rhubarb &Amp; Custard</td>
 				<td>Saison/Farmhouse Ale</td>
 				<td>6%</td>
 				<td>MID</td>
@@ -550,7 +550,7 @@
 			<tr>
 				<td>43</td>
 				<td>Moffat Beach Brewing Co</td>
-				<td>CAN&#39;T BEET A ROOT</td>
+				<td>Can&#39;T Beet A Root</td>
 				<td>Lager - Classic Pilsner</td>
 				<td>4.8%</td>
 				<td>MID</td>
@@ -560,7 +560,7 @@
 			<tr>
 				<td>44</td>
 				<td>Shifty Lizard Brewing Co.</td>
-				<td>COTTON CANDY SOUR</td>
+				<td>Cotton Candy Sour</td>
 				<td>Sour - Kettle Sour</td>
 				<td>4.8%</td>
 				<td>LOW</td>
@@ -570,7 +570,7 @@
 			<tr>
 				<td>45</td>
 				<td>Craft and Co.</td>
-				<td>THE CRAFT AND CO. WIPA</td>
+				<td>The Craft And Co. Wipa</td>
 				<td>IPA - Imperial</td>
 				<td>6.5%</td>
 				<td>MID</td>
@@ -580,7 +580,7 @@
 			<tr>
 				<td>46</td>
 				<td>Tallboy and Moose</td>
-				<td>WAGGLE BUZZ</td>
+				<td>Waggle Buzz</td>
 				<td>Braggot</td>
 				<td>6.6%</td>
 				<td>MID</td>
@@ -590,7 +590,7 @@
 			<tr>
 				<td>47</td>
 				<td>Reckless Brewing Co</td>
-				<td>BOGAN FUEL</td>
+				<td>Bogan Fuel</td>
 				<td>Specialty Beer</td>
 				<td>6.9%</td>
 				<td>MID</td>
@@ -600,7 +600,7 @@
 			<tr>
 				<td>48</td>
 				<td>Modus Brewing</td>
-				<td>CHROME FURY</td>
+				<td>Chrome Fury</td>
 				<td>Sour - Pastry</td>
 				<td>6%</td>
 				<td>MID</td>
@@ -610,7 +610,7 @@
 			<tr>
 				<td>49</td>
 				<td>Aether Brewing</td>
-				<td>BISCOFF ICE CREAM PORTER</td>
+				<td>Biscoff Ice Cream Porter</td>
 				<td>Experimental Beer</td>
 				<td>8%</td>
 				<td>HIGH</td>
@@ -620,7 +620,7 @@
 			<tr>
 				<td>50</td>
 				<td>Eumundi Brewery</td>
-				<td>GINGER NUT SPARKLING IPA</td>
+				<td>Ginger Nut Sparkling Ipa</td>
 				<td>IPA - Brut</td>
 				<td>6 %</td>
 				<td>MID</td>
@@ -630,7 +630,7 @@
 			<tr>
 				<td>51</td>
 				<td>Stoic Brewing</td>
-				<td>IMPERIAL LEMON MERINGUE TART SOUR</td>
+				<td>Imperial Lemon Meringue Tart Sour</td>
 				<td>Sour - Pastry</td>
 				<td>8.3%</td>
 				<td>HIGH</td>
@@ -640,7 +640,7 @@
 			<tr>
 				<td>52</td>
 				<td>Mismatch Brewing Co</td>
-				<td>HOP QUAD BUNS</td>
+				<td>Hop Quad Buns</td>
 				<td>Belgian Quad</td>
 				<td>10.5%</td>
 				<td>MID</td>
@@ -650,7 +650,7 @@
 			<tr>
 				<td>53</td>
 				<td>Merino Brewery</td>
-				<td>MULBERRY BUSH IMPERIAL IPA</td>
+				<td>Mulberry Bush Imperial Ipa</td>
 				<td>IPA - Black</td>
 				<td>7.5%</td>
 				<td>MID</td>
@@ -660,7 +660,7 @@
 			<tr>
 				<td>54</td>
 				<td>Working Title Brew Co</td>
-				<td>TAKE 5 - CHOC CARAMEL PEANUT BUTTER CUP DOUBLE MILK STOUT</td>
+				<td>Take 5 - Choc Caramel Peanut Butter Cup Double Milk Stout</td>
 				<td>Stout - Pastry</td>
 				<td>8%</td>
 				<td>HIGH</td>
@@ -670,7 +670,7 @@
 			<tr>
 				<td>55</td>
 				<td>Capital Brewing Co</td>
-				<td>SALVAGED SOUR - APPLE &amp; RHUBARB CRUMBLE PASTRY IMPERIAL SOUR</td>
+				<td>Salvaged Sour - Apple &Amp; Rhubarb Crumble Pastry Imperial Sour</td>
 				<td>Sour - Pastry</td>
 				<td>10%</td>
 				<td>HIGH</td>
@@ -680,7 +680,7 @@
 			<tr>
 				<td>56</td>
 				<td>Common Ground Brewing</td>
-				<td>BLOODY MISTIC</td>
+				<td>Bloody Mistic</td>
 				<td>American Wheat</td>
 				<td>6%</td>
 				<td>MID</td>
@@ -690,7 +690,7 @@
 			<tr>
 				<td>57</td>
 				<td>Slipstream Brewing Co</td>
-				<td>MAPLE BACON PANCAKE STOUT</td>
+				<td>Maple Bacon Pancake Stout</td>
 				<td>Stout - Sweet Stout</td>
 				<td>7%</td>
 				<td>MID</td>
@@ -700,7 +700,7 @@
 			<tr>
 				<td>58</td>
 				<td>Green Beacon</td>
-				<td>PEAK HYPE - LUSH GUAVA BEER - GREEN BEACON X VODKA CRUISER COLLAB</td>
+				<td>Peak Hype Lush Guava Beer (Green Beacon X Vodka Cruiser Collab)</td>
 				<td>Sour - Mixed Fermentation</td>
 				<td>6.1%</td>
 				<td>?</td>
@@ -809,8 +809,8 @@
 			</tr>
 			<tr>
 				<td>68</td>
-				<td>FISTS OF FIORI</td>
 				<td>Heroes and Villains</td>
+				<td>Fists Of Fiori</td>
 				<td>Sour - Pastry</td>
 				<td>6%</td>
 				<td>MID</td>
@@ -820,7 +820,7 @@
 			<tr>
 				<td>69</td>
 				<td>Jetty Road Brewery</td>
-				<td>BARREL-AGED RASPBERRY IMPERIAL STOUT</td>
+				<td>Barrel-Aged Raspberry Imperial Stout</td>
 				<td>Stout - Imperial</td>
 				<td>10%</td>
 				<td>HIGH</td>
@@ -830,7 +830,7 @@
 			<tr>
 				<td>70</td>
 				<td>Dainton Beer</td>
-				<td>CHOC BERRY BOMB</td>
+				<td>Choc Berry Bomb</td>
 				<td>Sour - Berliner Weisse</td>
 				<td>7%</td>
 				<td>MID</td>
@@ -840,7 +840,7 @@
 			<tr>
 				<td>71</td>
 				<td>Warrandyte Brewing Co.</td>
-				<td>DAYUMMM</td>
+				<td>Dayummm</td>
 				<td>Schwarzbier</td>
 				<td>5.5%</td>
 				<td>LOW</td>
@@ -850,7 +850,7 @@
 			<tr>
 				<td>72</td>
 				<td>Frenchies Brewery</td>
-				<td>TROPO-THIOL</td>
+				<td>Tropo-Thiol</td>
 				<td>Imperial IPA</td>
 				<td>8%</td>
 				<td>MID</td>
@@ -860,17 +860,17 @@
 			<tr>
 				<td>73</td>
 				<td>Sydney Brewery</td>
-				<td>G AND T GOSE</td>
+				<td>G and T Gose</td>
 				<td>Sour - Gose</td>
 				<td>5%</td>
 				<td>LOW</td>
-				<td><details><summary></summary>LOW Gose style with juniper berry and cucumber notes. This is a refreshing twist on the Hendricks and cucumber G and T.</details></td>
+				<td><details><summary></summary>Easy drinking Gose style with juniper berry and cucumber notes. This is a refreshing twist on the Hendricks and cucumber G and T.</details></td>
 				<td><input type="checkbox" id="option073"></td>
 			</tr>
 			<tr>
 				<td>74</td>
 				<td>Mountain Culture Beer Co</td>
-				<td>BALLOON ANIMALS</td>
+				<td>Balloon Animals</td>
 				<td>IPA - Milkshake</td>
 				<td>7.5%</td>
 				<td>MID</td>
@@ -880,7 +880,7 @@
 			<tr>
 				<td>75</td>
 				<td>Mountain Goat</td>
-				<td>GARTH’S FAVE PUNCH BOWL</td>
+				<td>Garth’S Fave Punch Bowl</td>
 				<td>Specialty Beer</td>
 				<td>6.5%</td>
 				<td>MID</td>
@@ -950,7 +950,7 @@
 			<tr>
 				<td>81</td>
 				<td>Quakers Hat Brewing</td>
-				<td>BRUT IPA</td>
+				<td>Brut Ipa</td>
 				<td>IPA - Brut</td>
 				<td>6.3%</td>
 				<td>MID</td>
@@ -960,7 +960,7 @@
 			<tr>
 				<td>82</td>
 				<td>Brewmanity Beer Co</td>
-				<td>SMOKEY BACON BALLS</td>
+				<td>Smokey Bacon Balls</td>
 				<td>Rauchbier</td>
 				<td>7%</td>
 				<td>HIGH</td>
@@ -970,7 +970,7 @@
 			<tr>
 				<td>83</td>
 				<td>Beerfarm</td>
-				<td>ALMIGHTY ASAM</td>
+				<td>Almighty Asam</td>
 				<td>Sour - Gose</td>
 				<td>7.8%</td>
 				<td>HIGH</td>
@@ -980,7 +980,7 @@
 			<tr>
 				<td>84</td>
 				<td>Currumbin Valley Brewing</td>
-				<td>CHEERY RIPE PORTER</td>
+				<td>Cheery Ripe Porter</td>
 				<td>Brown Porter</td>
 				<td>4.8%</td>
 				<td>MID</td>
@@ -990,7 +990,7 @@
 			<tr>
 				<td>85</td>
 				<td>Woolshed Brewery</td>
-				<td>WOOLSHED BREWERY AND VILI&#39;S FAMILY BAKERY MEAT PINT</td>
+				<td>Woolshed Brewery And Vili&#39;S Family Bakery Meat Pint</td>
 				<td>Specialty Beer</td>
 				<td>7.2%</td>
 				<td>HIGH</td>
@@ -1000,7 +1000,7 @@
 			<tr>
 				<td>86</td>
 				<td>TWØBAYS Brewing Co</td>
-				<td>PUMPKIN OF LIBERTY IPA</td>
+				<td>Pumpkin Of Liberty Ipa</td>
 				<td>IPA - American</td>
 				<td>7%</td>
 				<td>MID</td>
@@ -1010,7 +1010,7 @@
 			<tr>
 				<td>87</td>
 				<td>Wandana Brewing Co.</td>
-				<td>AZTEC (PALE CHOCOLATE LAGER)</td>
+				<td>Aztec (Pale Chocolate Lager)</td>
 				<td>Lager - Pale</td>
 				<td>4.4%</td>
 				<td>LOW</td>
@@ -1020,7 +1020,7 @@
 			<tr>
 				<td>88</td>
 				<td>Frexi Brewing</td>
-				<td>PIZZA BEER</td>
+				<td>Pizza Beer</td>
 				<td>Sour - Gose</td>
 				<td>4.2%</td>
 				<td>HIGH</td>
@@ -1030,7 +1030,7 @@
 			<tr>
 				<td>89</td>
 				<td>Snowys Brewery</td>
-				<td>SNOWY’S KÖLSCH</td>
+				<td>Snowy’S Kölsch</td>
 				<td>Kölsch</td>
 				<td>4.9%</td>
 				<td>LOW</td>
@@ -1040,7 +1040,7 @@
 			<tr>
 				<td>90</td>
 				<td>Jervis Bay Brewing Co</td>
-				<td>HYPSTER LATTE STOUT</td>
+				<td>Hypster Latte Stout</td>
 				<td>Sour - Berliner Weisse</td>
 				<td>7%</td>
 				<td>MID</td>
@@ -1100,7 +1100,7 @@
 			<tr>
 				<td>96</td>
 				<td>10 Toes Brewing</td>
-				<td>LIVING THE CREAM</td>
+				<td>Living The Cream</td>
 				<td>IPA - Pastry</td>
 				<td>5.8%</td>
 				<td>LOW</td>
@@ -1110,7 +1110,7 @@
 			<tr>
 				<td>97</td>
 				<td>Newstead Brewing Co</td>
-				<td>YO HO!</td>
+				<td>Yo Ho!</td>
 				<td>Rum Porter</td>
 				<td>9.9%</td>
 				<td>HIGH</td>
@@ -1120,7 +1120,7 @@
 			<tr>
 				<td>98</td>
 				<td>Boatrocker Brewers &amp; Distillers</td>
-				<td>GULLS JUST WANNA HAVE FUN (FISH &amp; CHIP GOSE)</td>
+				<td>Gulls Just Wanna Have Fun (Fish &Amp; Chip Gose)</td>
 				<td>Sour - Gose</td>
 				<td>5%</td>
 				<td>LOW</td>
@@ -1130,7 +1130,7 @@
 			<tr>
 				<td>99</td>
 				<td>Little Creatures</td>
-				<td>STOUTINI 2.0</td>
+				<td>Stoutini 2.0</td>
 				<td>Stout - Imperial Nitro Coffee</td>
 				<td>7.8%</td>
 				<td>MID</td>
@@ -1140,7 +1140,7 @@
 			<tr>
 				<td>100</td>
 				<td>Bentspoke Brewery</td>
-				<td>KEEPING IT SIMPLE</td>
+				<td>Keeping It Simple</td>
 				<td>JAIPA (Just another IPA)</td>
 				<td>6.8%</td>
 				<td>MID</td>
@@ -1160,7 +1160,7 @@
 			<tr>
 				<td>101</td>
 				<td>Aunty Jacks</td>
-				<td>AWW DUCK YEAH!</td>
+				<td>Aww Duck Yeah!</td>
 				<td>Stout - Sweet Stout</td>
 				<td>5.2%</td>
 				<td>MID</td>
@@ -1170,7 +1170,7 @@
 			<tr>
 				<td>102</td>
 				<td>Garage Project</td>
-				<td>THE WAY OF TEA</td>
+				<td>The Way Of Tea</td>
 				<td>IPA - Hazy</td>
 				<td>7%</td>
 				<td>HIGH</td>
@@ -1180,7 +1180,7 @@
 			<tr>
 				<td>103</td>
 				<td>Sierra Nevada</td>
-				<td>NO PLACE LIKE AUS</td>
+				<td>No Place Like Aus</td>
 				<td>IPA - Hoppy</td>
 				<td>6.5%</td>
 				<td>MID</td>
@@ -1190,7 +1190,7 @@
 			<tr>
 				<td>104</td>
 				<td>Cloudwater Brew Co.</td>
-				<td>PROPER GABS</td>
+				<td>Proper Gabs</td>
 				<td>IPA - New England (Double)</td>
 				<td>8%</td>
 				<td>HIGH</td>
@@ -1200,7 +1200,7 @@
 			<tr>
 				<td>105</td>
 				<td>Hudson Brewing</td>
-				<td>HAIL MARY, HAIR OF THE DOG</td>
+				<td>Hail Mary, Hair Of The Dog</td>
 				<td>Saison/Farmhouse Ale</td>
 				<td>5%</td>
 				<td>HIGH</td>
@@ -1210,7 +1210,7 @@
 			<tr>
 				<td>106</td>
 				<td>Impi Brewers</td>
-				<td>FIERY AZZURRO PILS</td>
+				<td>Fiery Azzurro Pils</td>
 				<td>Specialty Beer</td>
 				<td>6.5%</td>
 				<td>MID</td>
@@ -1220,7 +1220,7 @@
 			<tr>
 				<td>107</td>
 				<td>Beerland</td>
-				<td>INVISIBLE ORANGES</td>
+				<td>Invisible Oranges</td>
 				<td>IPA - Black</td>
 				<td>6.5%</td>
 				<td>LOW</td>
@@ -1230,7 +1230,7 @@
 			<tr>
 				<td>108</td>
 				<td>Rocky Ridge Brewing Co.</td>
-				<td>FROOTIE &amp; THE BLOWFISH</td>
+				<td>Frootie &Amp; The Blowfish</td>
 				<td>Fruit Beer</td>
 				<td>8%</td>
 				<td>HIGH</td>
@@ -1240,7 +1240,7 @@
 			<tr>
 				<td>109</td>
 				<td>Hiker Brewing Co</td>
-				<td>HOLD THE PORK</td>
+				<td>Hold The Pork</td>
 				<td>Specialty Beer</td>
 				<td>5%</td>
 				<td>MID</td>
@@ -1250,7 +1250,7 @@
 			<tr>
 				<td>110</td>
 				<td>One Drop Brewing Co.</td>
-				<td>RASPBERRY LEMONADE</td>
+				<td>Raspberry Lemonade</td>
 				<td>Specialty Brew</td>
 				<td>6.2%</td>
 				<td>MID</td>
@@ -1260,7 +1260,7 @@
 			<tr>
 				<td>111</td>
 				<td>Rusty Penny Brewing</td>
-				<td>LUCKY CHARMS CEREAL MILK STOUT</td>
+				<td>Lucky Charms Cereal Milk Stout</td>
 				<td>Stout - Sweet Stout</td>
 				<td>7.2%</td>
 				<td>MID</td>
@@ -1270,7 +1270,7 @@
 			<tr>
 				<td>112</td>
 				<td>Southern Highlands Brewing</td>
-				<td>RONIN - JAPANESE DOUBLE IPA</td>
+				<td>Ronin - Japanese Double Ipa</td>
 				<td>IPA - Double</td>
 				<td>7%</td>
 				<td>HIGH</td>
@@ -1280,7 +1280,7 @@
 			<tr>
 				<td>113</td>
 				<td>Roots &amp; Leaves</td>
-				<td>SPICY WOMBAT</td>
+				<td>Spicy Wombat</td>
 				<td>Ginger/Spiced Beer</td>
 				<td>6%</td>
 				<td>MID</td>
@@ -1290,7 +1290,7 @@
 			<tr>
 				<td>114</td>
 				<td>Funk Cider</td>
-				<td>CHERRY NICE GRAF</td>
+				<td>Cherry Nice Graf</td>
 				<td>Graf (Cider/Beer blend)</td>
 				<td>7.5%</td>
 				<td>HIGH</td>
@@ -1300,7 +1300,7 @@
 			<tr>
 				<td>115</td>
 				<td>Hohly Water</td>
-				<td>PINEAPPLE EXPRESS</td>
+				<td>Pineapple Express</td>
 				<td>Seltzer</td>
 				<td>4.5%</td>
 				<td>LOW</td>
@@ -1310,7 +1310,7 @@
 			<tr>
 				<td>116</td>
 				<td>Felons Brewing Co</td>
-				<td>BARREL AGED SELTZERITA</td>
+				<td>Barrel Aged Seltzerita</td>
 				<td>Seltzer</td>
 				<td>13%</td>
 				<td>HIGH</td>
@@ -1320,7 +1320,7 @@
 			<tr>
 				<td>117</td>
 				<td>Cedar Creek Cider</td>
-				<td>APPLE AND BLACK CURRANT CIDER</td>
+				<td>Apple And Black Currant Cider</td>
 				<td>Cider</td>
 				<td>4.5%</td>
 				<td>LOW</td>
